--- a/src/Catty/Resources/Localization/cs.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/cs.lproj/Localizable.strings
@@ -254,6 +254,9 @@
 "Choose image" = "Zvolte obrázek";
 
 /* No comment provided by engineer. */
+"Clear" = "Smazat";
+
+/* No comment provided by engineer. */
 "Clear graphic effects" = "Vyčistit grafické efekty";
 
 /* No comment provided by engineer. */
@@ -1118,6 +1121,15 @@
 "Passwords do not match" = "Hesla se neshodují";
 
 /* No comment provided by engineer. */
+"Pen" = "Pero";
+
+/* No comment provided by engineer. */
+"Pen down" = "Pero dolu";
+
+/* No comment provided by engineer. */
+"Pen up" = "Pero nahoru";
+
+/* No comment provided by engineer. */
 "Phiro" = "Phiro";
 
 /* No comment provided by engineer. */
@@ -1221,9 +1233,6 @@
 
 /* No comment provided by engineer. */
 "Privacy Settings" = "Nastavení ochrany osobních údajů";
-
-/* No comment provided by engineer. */
-"Problems occured while uploading your project" = "Problems occured while uploading your project";
 
 /* No comment provided by engineer. */
 "Project" = "Projekt";
@@ -1337,6 +1346,9 @@
 "Say" = "Říct";
 
 /* No comment provided by engineer. */
+"Scene" = "Scene";
+
+/* No comment provided by engineer. */
 "Script" = "Skript";
 
 /* No comment provided by engineer. */
@@ -1394,6 +1406,9 @@
 "Server is taking to long to respond, please try again later." = "Server is taking to long to respond, please try again later.";
 
 /* No comment provided by engineer. */
+"Session expired, please log in." = "Session expired, please log in.";
+
+/* No comment provided by engineer. */
 "Set Arduino digital pin" = "Nastavit Arduino digitální pin";
 
 /* No comment provided by engineer. */
@@ -1410,6 +1425,9 @@
 
 /* No comment provided by engineer. */
 "Set description" = "Nastavit popis";
+
+/* No comment provided by engineer. */
+"Set pen size to" = "Nastavit velikost pera na";
 
 /* No comment provided by engineer. */
 "Set Phiro light" = "Nastavit Phiro světla";
@@ -1455,6 +1473,9 @@
 
 /* No comment provided by engineer. */
 "SO" = "SO";
+
+/* No comment provided by engineer. */
+"Something went wrong while uploading the project." = "Došlo k chybě při nahrávání programu.";
 
 /* No comment provided by engineer. */
 "Sound" = "Zvuk";
@@ -1590,6 +1611,9 @@
 
 /* No comment provided by engineer. */
 "This feature is coming soon!" = "Tato funkce bude již brzy!";
+
+/* No comment provided by engineer. */
+"This list can not be deleted because it is still in use." = "This list can not be deleted because it is still in use.";
 
 /* No comment provided by engineer. */
 "This variable can not be deleted because it is still in use." = "Tato proměnná nelze odstranit, protože je stále v provozu.";
