--- a/src/Catty/Resources/Localization/fr.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/fr.lproj/Localizable.strings
@@ -254,6 +254,9 @@
 "Choose image" = "Choisir l'image";
 
 /* No comment provided by engineer. */
+"Clear" = "Effacer";
+
+/* No comment provided by engineer. */
 "Clear graphic effects" = "Supprimer les effets graphiques";
 
 /* No comment provided by engineer. */
@@ -1118,6 +1121,15 @@
 "Passwords do not match" = "Les mots de passes ne correspondent pas";
 
 /* No comment provided by engineer. */
+"Pen" = "Stylo";
+
+/* No comment provided by engineer. */
+"Pen down" = "Stylo en position d'écriture";
+
+/* No comment provided by engineer. */
+"Pen up" = "Relever le stylo";
+
+/* No comment provided by engineer. */
 "Phiro" = "Phiro";
 
 /* No comment provided by engineer. */
@@ -1221,9 +1233,6 @@
 
 /* No comment provided by engineer. */
 "Privacy Settings" = "Privacy Settings";
-
-/* No comment provided by engineer. */
-"Problems occured while uploading your project" = "Problems occured while uploading your project";
 
 /* No comment provided by engineer. */
 "Project" = "Project";
@@ -1337,6 +1346,9 @@
 "Say" = "Dit";
 
 /* No comment provided by engineer. */
+"Scene" = "Scene";
+
+/* No comment provided by engineer. */
 "Script" = "Script";
 
 /* No comment provided by engineer. */
@@ -1394,6 +1406,9 @@
 "Server is taking to long to respond, please try again later." = "Server is taking to long to respond, please try again later.";
 
 /* No comment provided by engineer. */
+"Session expired, please log in." = "Session expired, please log in.";
+
+/* No comment provided by engineer. */
 "Set Arduino digital pin" = "Définir broche digitale Arduino";
 
 /* No comment provided by engineer. */
@@ -1410,6 +1425,9 @@
 
 /* No comment provided by engineer. */
 "Set description" = "Définir la description";
+
+/* No comment provided by engineer. */
+"Set pen size to" = "Définir la taille du stylo à";
 
 /* No comment provided by engineer. */
 "Set Phiro light" = "Définir la lumière du Phiro";
@@ -1455,6 +1473,9 @@
 
 /* No comment provided by engineer. */
 "SO" = "SO";
+
+/* No comment provided by engineer. */
+"Something went wrong while uploading the project." = "Une erreur s'est produite lors du téléchargement de l'appli.";
 
 /* No comment provided by engineer. */
 "Sound" = "Sons";
@@ -1590,6 +1611,9 @@
 
 /* No comment provided by engineer. */
 "This feature is coming soon!" = "Cette fonctionnalité sera bientôt disponible !";
+
+/* No comment provided by engineer. */
+"This list can not be deleted because it is still in use." = "This list can not be deleted because it is still in use.";
 
 /* No comment provided by engineer. */
 "This variable can not be deleted because it is still in use." = "This variable can not be deleted because it is still in use.";
