--- a/src/Catty/Resources/Localization/pt.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/pt.lproj/Localizable.strings
@@ -254,6 +254,9 @@
 "Choose image" = "Escolher imagem";
 
 /* No comment provided by engineer. */
+"Clear" = "Clear";
+
+/* No comment provided by engineer. */
 "Clear graphic effects" = "Limpar efeitos gráficos";
 
 /* No comment provided by engineer. */
@@ -1118,6 +1121,15 @@
 "Passwords do not match" = "As senhas não coincidem";
 
 /* No comment provided by engineer. */
+"Pen" = "Caneta";
+
+/* No comment provided by engineer. */
+"Pen down" = "Pen down";
+
+/* No comment provided by engineer. */
+"Pen up" = "Pen up";
+
+/* No comment provided by engineer. */
 "Phiro" = "Phiro";
 
 /* No comment provided by engineer. */
@@ -1221,9 +1233,6 @@
 
 /* No comment provided by engineer. */
 "Privacy Settings" = "Configurações de Privacidade";
-
-/* No comment provided by engineer. */
-"Problems occured while uploading your project" = "Problems occured while uploading your project";
 
 /* No comment provided by engineer. */
 "Project" = "Projecto";
@@ -1337,6 +1346,9 @@
 "Say" = "Say";
 
 /* No comment provided by engineer. */
+"Scene" = "Scene";
+
+/* No comment provided by engineer. */
 "Script" = "Guião";
 
 /* No comment provided by engineer. */
@@ -1394,6 +1406,9 @@
 "Server is taking to long to respond, please try again later." = "Server is taking to long to respond, please try again later.";
 
 /* No comment provided by engineer. */
+"Session expired, please log in." = "Session expired, please log in.";
+
+/* No comment provided by engineer. */
 "Set Arduino digital pin" = "Alterar o pino digital do Arduino para";
 
 /* No comment provided by engineer. */
@@ -1410,6 +1425,9 @@
 
 /* No comment provided by engineer. */
 "Set description" = "Alterar a descrição para";
+
+/* No comment provided by engineer. */
+"Set pen size to" = "Set pen size to";
 
 /* No comment provided by engineer. */
 "Set Phiro light" = "Alterar a luz do Phiro para";
@@ -1455,6 +1473,9 @@
 
 /* No comment provided by engineer. */
 "SO" = "Sol";
+
+/* No comment provided by engineer. */
+"Something went wrong while uploading the project." = "Ocorreu um erro ao fazer o upload do programa.";
 
 /* No comment provided by engineer. */
 "Sound" = "Som";
@@ -1590,6 +1611,9 @@
 
 /* No comment provided by engineer. */
 "This feature is coming soon!" = "Esta funcionalidade será disponibilizada em breve!";
+
+/* No comment provided by engineer. */
+"This list can not be deleted because it is still in use." = "This list can not be deleted because it is still in use.";
 
 /* No comment provided by engineer. */
 "This variable can not be deleted because it is still in use." = "Esta variável não pode ser removida porque ainda está em uso.";
