--- a/src/Catty/Resources/Localization/sv.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/sv.lproj/Localizable.strings
@@ -254,6 +254,9 @@
 "Choose image" = "Välj bild";
 
 /* No comment provided by engineer. */
+"Clear" = "Rensa";
+
+/* No comment provided by engineer. */
 "Clear graphic effects" = "ta bort grafiska effekter";
 
 /* No comment provided by engineer. */
@@ -1118,6 +1121,15 @@
 "Passwords do not match" = "Lösenorden matchar ej";
 
 /* No comment provided by engineer. */
+"Pen" = "Penna";
+
+/* No comment provided by engineer. */
+"Pen down" = "Penna ned";
+
+/* No comment provided by engineer. */
+"Pen up" = "Pen up";
+
+/* No comment provided by engineer. */
 "Phiro" = "Phiro";
 
 /* No comment provided by engineer. */
@@ -1221,9 +1233,6 @@
 
 /* No comment provided by engineer. */
 "Privacy Settings" = "Privacy Settings";
-
-/* No comment provided by engineer. */
-"Problems occured while uploading your project" = "Problems occured while uploading your project";
 
 /* No comment provided by engineer. */
 "Project" = "Projekt";
@@ -1337,6 +1346,9 @@
 "Say" = "Säg";
 
 /* No comment provided by engineer. */
+"Scene" = "Scene";
+
+/* No comment provided by engineer. */
 "Script" = "Skript";
 
 /* No comment provided by engineer. */
@@ -1394,6 +1406,9 @@
 "Server is taking to long to respond, please try again later." = "Server is taking to long to respond, please try again later.";
 
 /* No comment provided by engineer. */
+"Session expired, please log in." = "Session expired, please log in.";
+
+/* No comment provided by engineer. */
 "Set Arduino digital pin" = "Set Arduino digital pin";
 
 /* No comment provided by engineer. */
@@ -1410,6 +1425,9 @@
 
 /* No comment provided by engineer. */
 "Set description" = "Ange beskrivning";
+
+/* No comment provided by engineer. */
+"Set pen size to" = "Set pen size to";
 
 /* No comment provided by engineer. */
 "Set Phiro light" = "Set Phiro light";
@@ -1455,6 +1473,9 @@
 
 /* No comment provided by engineer. */
 "SO" = "SO";
+
+/* No comment provided by engineer. */
+"Something went wrong while uploading the project." = "Ett fel uppstod när du ladda upp programmet.";
 
 /* No comment provided by engineer. */
 "Sound" = "Ljud";
@@ -1590,6 +1611,9 @@
 
 /* No comment provided by engineer. */
 "This feature is coming soon!" = "Denna funktion kommer snart!";
+
+/* No comment provided by engineer. */
+"This list can not be deleted because it is still in use." = "This list can not be deleted because it is still in use.";
 
 /* No comment provided by engineer. */
 "This variable can not be deleted because it is still in use." = "This variable can not be deleted because it is still in use.";
