--- a/src/Catty/Resources/Localization/sw.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/sw.lproj/Localizable.strings
@@ -254,6 +254,9 @@
 "Choose image" = "Chagua picha";
 
 /* No comment provided by engineer. */
+"Clear" = "Safisha";
+
+/* No comment provided by engineer. */
 "Clear graphic effects" = "Athari ya wazi ya kielezo";
 
 /* No comment provided by engineer. */
@@ -1118,6 +1121,15 @@
 "Passwords do not match" = "Manenosiri hayafanani";
 
 /* No comment provided by engineer. */
+"Pen" = "Kalamu";
+
+/* No comment provided by engineer. */
+"Pen down" = "Kalamu chini";
+
+/* No comment provided by engineer. */
+"Pen up" = "Kalamu juu";
+
+/* No comment provided by engineer. */
 "Phiro" = "Phiro";
 
 /* No comment provided by engineer. */
@@ -1221,9 +1233,6 @@
 
 /* No comment provided by engineer. */
 "Privacy Settings" = "Privacy Settings";
-
-/* No comment provided by engineer. */
-"Problems occured while uploading your project" = "Problems occured while uploading your project";
 
 /* No comment provided by engineer. */
 "Project" = "Mradi";
@@ -1337,6 +1346,9 @@
 "Say" = "Sema";
 
 /* No comment provided by engineer. */
+"Scene" = "Scene";
+
+/* No comment provided by engineer. */
 "Script" = "Hati";
 
 /* No comment provided by engineer. */
@@ -1394,6 +1406,9 @@
 "Server is taking to long to respond, please try again later." = "Server is taking to long to respond, please try again later.";
 
 /* No comment provided by engineer. */
+"Session expired, please log in." = "Session expired, please log in.";
+
+/* No comment provided by engineer. */
 "Set Arduino digital pin" = "Kuweka pin ya dijiti ya Arduino";
 
 /* No comment provided by engineer. */
@@ -1410,6 +1425,9 @@
 
 /* No comment provided by engineer. */
 "Set description" = "Weka maelezo";
+
+/* No comment provided by engineer. */
+"Set pen size to" = "Seti ukubwa wa kalamu kwa";
 
 /* No comment provided by engineer. */
 "Set Phiro light" = "Seti mwanga wa Phiro";
@@ -1455,6 +1473,9 @@
 
 /* No comment provided by engineer. */
 "SO" = "HIVYO";
+
+/* No comment provided by engineer. */
+"Something went wrong while uploading the project." = "Kosa limetokea wakati wa kupakia programu.";
 
 /* No comment provided by engineer. */
 "Sound" = "Sauti";
@@ -1590,6 +1611,9 @@
 
 /* No comment provided by engineer. */
 "This feature is coming soon!" = "Hiki kipengele kinakuja hivi karibuni!";
+
+/* No comment provided by engineer. */
+"This list can not be deleted because it is still in use." = "This list can not be deleted because it is still in use.";
 
 /* No comment provided by engineer. */
 "This variable can not be deleted because it is still in use." = "Hiki kitofautishi hakiwezi kufutwa kwasababu kinaendelea kutumika.";
