--- a/src/Catty/Resources/Localization/th.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/th.lproj/Localizable.strings
@@ -254,6 +254,9 @@
 "Choose image" = "เลือกภาพ";
 
 /* No comment provided by engineer. */
+"Clear" = "Clear";
+
+/* No comment provided by engineer. */
 "Clear graphic effects" = "ล้างลักษณะพิเศษ";
 
 /* No comment provided by engineer. */
@@ -1118,6 +1121,15 @@
 "Passwords do not match" = "Passwords do not match";
 
 /* No comment provided by engineer. */
+"Pen" = "ปากกา";
+
+/* No comment provided by engineer. */
+"Pen down" = "วางปากกาลง";
+
+/* No comment provided by engineer. */
+"Pen up" = "ยกปากกาขึ้น";
+
+/* No comment provided by engineer. */
 "Phiro" = "Phiro";
 
 /* No comment provided by engineer. */
@@ -1211,7 +1223,7 @@
 "position y" = "ตำแหน่ง_y";
 
 /* No comment provided by engineer. */
-"Preview" = "Preview";
+"Preview" = "แสดงตัวอย่าง";
 
 /* No comment provided by engineer. */
 "Previous background" = "พื้นหลังก่อนหน้า";
@@ -1221,9 +1233,6 @@
 
 /* No comment provided by engineer. */
 "Privacy Settings" = "Privacy Settings";
-
-/* No comment provided by engineer. */
-"Problems occured while uploading your project" = "Problems occured while uploading your project";
 
 /* No comment provided by engineer. */
 "Project" = "โครงการ";
@@ -1337,6 +1346,9 @@
 "Say" = "พูด";
 
 /* No comment provided by engineer. */
+"Scene" = "Scene";
+
+/* No comment provided by engineer. */
 "Script" = "Script";
 
 /* No comment provided by engineer. */
@@ -1394,6 +1406,9 @@
 "Server is taking to long to respond, please try again later." = "Server is taking to long to respond, please try again later.";
 
 /* No comment provided by engineer. */
+"Session expired, please log in." = "เซสชันหมดอายุโปรดเข้าสู่ระบบ";
+
+/* No comment provided by engineer. */
 "Set Arduino digital pin" = "ตั้ง Arduino ดิจิตอลพิน";
 
 /* No comment provided by engineer. */
@@ -1410,6 +1425,9 @@
 
 /* No comment provided by engineer. */
 "Set description" = "กำหนดคำอธิบาย";
+
+/* No comment provided by engineer. */
+"Set pen size to" = "ตั้งค่าขนาดปากกาเป็น";
 
 /* No comment provided by engineer. */
 "Set Phiro light" = "ชุดไฟ Phiro";
@@ -1455,6 +1473,9 @@
 
 /* No comment provided by engineer. */
 "SO" = "SO";
+
+/* No comment provided by engineer. */
+"Something went wrong while uploading the project." = "ข้อผิดพลาดเกิดขึ้นขณะอัปโหลดโปรแกรม";
 
 /* No comment provided by engineer. */
 "Sound" = "เสียง";
@@ -1590,6 +1611,9 @@
 
 /* No comment provided by engineer. */
 "This feature is coming soon!" = "ฟีเจอร์นี้กำลังจะมาในเร็วๆ นี้!";
+
+/* No comment provided by engineer. */
+"This list can not be deleted because it is still in use." = "This list can not be deleted because it is still in use.";
 
 /* No comment provided by engineer. */
 "This variable can not be deleted because it is still in use." = "This variable can not be deleted because it is still in use.";
