--- a/src/Catty/Resources/Localization/tr.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/tr.lproj/Localizable.strings
@@ -254,6 +254,9 @@
 "Choose image" = "Resim seç";
 
 /* No comment provided by engineer. */
+"Clear" = "Temizle";
+
+/* No comment provided by engineer. */
 "Clear graphic effects" = "Grafik efektlerini temizle";
 
 /* No comment provided by engineer. */
@@ -1118,6 +1121,15 @@
 "Passwords do not match" = "Parolalar uyuşmuyor";
 
 /* No comment provided by engineer. */
+"Pen" = "Kalem";
+
+/* No comment provided by engineer. */
+"Pen down" = "Pen down";
+
+/* No comment provided by engineer. */
+"Pen up" = "Pen up";
+
+/* No comment provided by engineer. */
 "Phiro" = "Phiro";
 
 /* No comment provided by engineer. */
@@ -1221,9 +1233,6 @@
 
 /* No comment provided by engineer. */
 "Privacy Settings" = "Gizlilik ayarları";
-
-/* No comment provided by engineer. */
-"Problems occured while uploading your project" = "Problems occured while uploading your project";
 
 /* No comment provided by engineer. */
 "Project" = "Proje";
@@ -1337,6 +1346,9 @@
 "Say" = "Söylemek";
 
 /* No comment provided by engineer. */
+"Scene" = "Scene";
+
+/* No comment provided by engineer. */
 "Script" = "Komut dizisi";
 
 /* No comment provided by engineer. */
@@ -1394,6 +1406,9 @@
 "Server is taking to long to respond, please try again later." = "Server is taking to long to respond, please try again later.";
 
 /* No comment provided by engineer. */
+"Session expired, please log in." = "Session expired, please log in.";
+
+/* No comment provided by engineer. */
 "Set Arduino digital pin" = "Arduino dijital pinini ayarla";
 
 /* No comment provided by engineer. */
@@ -1410,6 +1425,9 @@
 
 /* No comment provided by engineer. */
 "Set description" = "Açıklayınız";
+
+/* No comment provided by engineer. */
+"Set pen size to" = "Set pen size to";
 
 /* No comment provided by engineer. */
 "Set Phiro light" = "Phiro ışığını ayarla";
@@ -1455,6 +1473,9 @@
 
 /* No comment provided by engineer. */
 "SO" = "YANİ";
+
+/* No comment provided by engineer. */
+"Something went wrong while uploading the project." = "Programı yüklerken bir hata oluştu.";
 
 /* No comment provided by engineer. */
 "Sound" = "Ses";
@@ -1590,6 +1611,9 @@
 
 /* No comment provided by engineer. */
 "This feature is coming soon!" = "Bu özellik yakında çıkacak!";
+
+/* No comment provided by engineer. */
+"This list can not be deleted because it is still in use." = "This list can not be deleted because it is still in use.";
 
 /* No comment provided by engineer. */
 "This variable can not be deleted because it is still in use." = "Bu değişken hala kullanımda olduğu için silinemez.";
